libraries/stzlib/test/temp/log_2y7faag2.txt
temp\\temp_2y7faag2.c: In function 'main':
temp\\temp_2y7faag2.c:313:47: error: 'res' undeclared (first use in this function)
  313 |                             transform_to_ring(res, "temp\\cresult_2y7faag2.txt");
      |                                               ^~~
temp\\temp_2y7faag2.c:313:47: note: each undeclared identifier is reported only once for each function it appears in
